--- a/index.html
+++ b/index.html
@@ -336,7 +336,9 @@
       <section class="slider_body slider_body--show" data-id="1">
         <div class="slider_texts">
           <h2 class="subtitulo">¡Hola! Mi nombre es Luis Vanegas</h2>
-          <p class="slider_rewiw">Desarrolador web y creador de la pagina</p>
+          <p class="slider_rewiw">Desarrolador web y creador de la pagina
+                Estudiante Universitario del cesde.
+          </p>
         </div>
 
         
@@ -378,18 +380,6 @@
       <img src="svg/arrow.svg" class="slider_arrow" id="after">
     </div>
   </section>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
